smoll fixes